[gd_scene load_steps=11 format=3 uid="uid://drcnhm1eucgpx"]

[ext_resource type="Script" path="res://actors/player/player.gd" id="1_23uea"]
[ext_resource type="PackedScene" uid="uid://cdqi1i6hckxsm" path="res://weapons/weapon.tscn" id="2_7e7k0"]
[ext_resource type="PackedScene" uid="uid://cduvft2wt6cvy" path="res://weapons/melee_weapon.tscn" id="3_2xpv7"]
[ext_resource type="Texture2D" uid="uid://nccwyvv0rprf" path="res://Tilemap/tilemap.png" id="3_hl7ua"]
[ext_resource type="PackedScene" uid="uid://gqfktt83k5go" path="res://skills/skill_manager.tscn" id="4_skill"]

[sub_resource type="Gradient" id="Gradient_6n4ev"]
offsets = PackedFloat32Array(0.00704225, 1)
colors = PackedColorArray(1, 1, 1, 0.556863, 1, 1, 1, 0.0901961)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4llv3"]
gradient = SubResource("Gradient_6n4ev")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Curve" id="Curve_kvwcw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.747253), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_0sx0c"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdtju"]
size = Vector2(63.9435, 16.0607)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_23uea")
projectile_scene = ExtResource("2_7e7k0")
melee_scene = ExtResource("3_2xpv7")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
scale = Vector2(1.01268, 1)
emitting = false
amount = 16
lifetime = 0.2
one_shot = true
texture = SubResource("GradientTexture2D_4llv3")
gravity = Vector2(0, 0)
scale_amount_min = 0.25
scale_amount_max = 0.25
scale_amount_curve = SubResource("Curve_kvwcw")
color_ramp = SubResource("Gradient_0sx0c")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.66893e-06, 7.15256e-07)
scale = Vector2(1.33333, 1.23077)
texture = ExtResource("3_hl7ua")
region_enabled = true
region_rect = Rect2(19, 122, 12, 13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.250221, 0.249055)
shape = SubResource("RectangleShape2D_jdtju")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.0854322, 0.0854322)
zoom = Vector2(2.5, 2.5)
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 16.0

[node name="ProjectileSpawn" type="Marker2D" parent="."]

[node name="MeleeWeaponHolder" type="Node2D" parent="."]

[node name="Label" type="Label" parent="."]

[node name="SkillManager" parent="." instance=ExtResource("4_skill")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBarBackground" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 424.0
offset_bottom = 40.0
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="HealthBar" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 424.0
offset_bottom = 40.0
color = Color(0.8, 0.2, 0.2, 0.8)

[node name="HealthLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 424.0
offset_bottom = 43.0
text = "HP: 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaBarBackground" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 424.0
offset_bottom = 70.0
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="StaminaBar" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 424.0
offset_bottom = 70.0
color = Color(0.2, 0.6, 0.8, 0.8)

[node name="StaminaLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 424.0
offset_bottom = 73.0
text = "Stamina: 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillsContainer" type="HBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 120.0
alignment = 1

[node name="Skill1" type="Panel" parent="CanvasLayer/UI/SkillsContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/UI/SkillsContainer/Skill1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Skill2" type="Panel" parent="CanvasLayer/UI/SkillsContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/UI/SkillsContainer/Skill2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Skill3" type="Panel" parent="CanvasLayer/UI/SkillsContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/UI/SkillsContainer/Skill3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Skill4" type="Panel" parent="CanvasLayer/UI/SkillsContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/UI/SkillsContainer/Skill4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Skill5" type="Panel" parent="CanvasLayer/UI/SkillsContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/UI/SkillsContainer/Skill5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
